[gd_scene load_steps=8 format=3 uid="uid://ojiglxxnkbvh"]

[ext_resource type="Script" path="res://Mage.gd" id="1_bag4k"]
[ext_resource type="PackedScene" uid="uid://bu71cu0nmt3bi" path="res://scenes/mage_mesh.tscn" id="2_1gdtd"]
[ext_resource type="PackedScene" uid="uid://dyhk34bvr5waa" path="res://scenes/health_component.tscn" id="3_ye6gl"]
[ext_resource type="PackedScene" uid="uid://cpu05u0h3yhp7" path="res://scenes/e_indicator.tscn" id="4_iobbf"]
[ext_resource type="PackedScene" uid="uid://ccp0g1dxpq6g1" path="res://scenes/dialog_box.tscn" id="5_bpcw8"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_8bwo0"]
radius = 0.610233
height = 2.17312

[sub_resource type="BoxShape3D" id="BoxShape3D_txwka"]
size = Vector3(2.62874, 1, 2.82114)

[node name="Mage" type="CharacterBody3D"]
script = ExtResource("1_bag4k")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.05456, 0)
shape = SubResource("CapsuleShape3D_8bwo0")

[node name="MageMesh" parent="." instance=ExtResource("2_1gdtd")]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0, 0, 0)

[node name="HealthComponent" parent="." instance=ExtResource("3_ye6gl")]
starting_health = 3

[node name="EIndicator" parent="." instance=ExtResource("4_iobbf")]
transform = Transform3D(0.0710753, 0, 0, 0, 0.0655214, 0, 0, 0, 0.30852, 0, 1.50556, 0.60627)
visible = false

[node name="PlayerDetectionArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerDetectionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.607483, 0)
shape = SubResource("BoxShape3D_txwka")

[node name="DialogBox" parent="." instance=ExtResource("5_bpcw8")]
visible = false

[connection signal="die" from="HealthComponent" to="." method="_on_health_component_die"]
[connection signal="take_damage" from="HealthComponent" to="." method="_on_health_component_take_damage"]
[connection signal="body_entered" from="PlayerDetectionArea" to="." method="_on_player_detection_area_body_entered"]
[connection signal="body_exited" from="PlayerDetectionArea" to="." method="_on_player_detection_area_body_exited"]
[connection signal="close_shop" from="DialogBox" to="." method="_on_dialog_box_close_shop"]
